--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # --- Required options --- #
 
 # Name of website
-title: RoSA Projects
+title: Robotics & Autonomous Systems
 
 # Your name to show in the footer
 author: Marco Reis
@@ -21,32 +21,35 @@ navbar-links:
   #   - Geonosis: "project-1"
   #   - Kamino: "project-1"
   #   - Manisub: "project-1"
-  Done!-projects:
-    - Elir: "project-2"
-    - Learnbotics: "project-2"
-    - Doogie: "project-2"
-    - Birhex: "project-2"
-    - Open Manipulator: "project-2"
-    - Dynamic End-Effector: "project-2"
-    - Timon Manipulator: "project-2"
-    - Raja Manipulator: "project-2"
-    - Borg Arm: "project-2"
-    - WBM Rtab-map: "project-2"
-    - WBM Orb2slam: "project-2"
-    - WBM EKFslam: "project-2"
-    - r-hope: "project-2"
-  InProg-projects:
-    - Warthog: "project-2"
-    - Moco: "project-2"
-    - Droilt: "project-2"
-    - AUM: "project-2"
+  in Academy:
+    - Pong: ""
+  making:
+    - Warthog: ""
+    - Moco: ""
+    - Droilt: ""
+    - AUM: ""
     - Turbot: "project-turbot"
-    - Ergo: "project-2"
-    - Jetbot 1: "project-2"
-    - Jetbot 2: "project-2"
-    - Jetbot 3: "project-2"
+    - Ergo: ""
+    - Jetbot 1: ""
+    - Jetbot 2: ""
+    - Jetbot 3: ""
     - Walker: "project-walker"
-    - bbot: "project-2"
+    - bbot: ""
+  accomplished:
+    - Elir: ""
+    - Learnbotics: ""
+    - Doogie: ""
+    - Birhex: ""
+    - Open Manipulator: ""
+    - Dynamic End-Effector: ""
+    - Timon: ""
+    - Raja: ""
+    - Borg: ""
+    - WBM Rtab-map: ""
+    - WBM Orb2slam: ""
+    - WBM EKFslam: ""
+    - r-hope: ""
+  
   About Us: "aboutus"
   #  - Beautiful Jekyll: "https://beautifuljekyll.com"
   #  - Learn markdown: "https://www.markdowntutorial.com/"
@@ -97,7 +100,7 @@ social-network-links:
 
 # If you want to show a link to an RSS in the footer, add the site description here.
 # If you don't want to show an RSS link, remove the following line.
-rss-description: This website is a virtual proof that I'm awesome
+rss-description: This website is about our projects.
 
 # --- General options --- #
 
