--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ navbar-links:
     - AUM: "project-aum"
     - Turbot: "project-turbot"
     - Ergo: ""
-    - Hephaestus: ""
+    - Hefesto: "project-hefesto"
   accomplished:
     - Elir: ""
     - Learnbotics: ""
